# app-metadata-crate

./: CHANGELOG.md  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
app_metadata_crate/: all.html  index.html  sidebar-items.js  struct.CustomSection.html  struct.Error.html  struct.Module.html
examples/: inspector.rs
src/: .error.rs.swp  daku.rs  error.rs  lib.rs  module.rs  seal.rs  section.rs
src/app_metadata_crate/: lib.rs.html
src/daku/: category.rs  file.rs  mod.rs  nucleide.rs  portal.rs  portals.rs  read.rs  section.rs  write.rs
src/name/: mod.rs  read.rs  section.rs  write.rs
src/parity_wasm/: io.rs.html  lib.rs.html
src/parse/: mod.rs  num.rs  reader.rs  writer.rs
src/proc_macro2/: detection.rs.html  fallback.rs.html  lib.rs.html  marker.rs.html  parse.rs.html  wrapper.rs.html
src/producers/: mod.rs  producer.rs  read.rs  write.rs
src/quote/: ext.rs.html  format.rs.html  ident_fragment.rs.html  lib.rs.html  runtime.rs.html  spanned.rs.html  to_tokens.rs.html
src/syn/: attr.rs.html  await.rs.html  bigint.rs.html  buffer.rs.html  custom_keyword.rs.html  custom_punctuation.rs.html  data.rs.html  derive.rs.html  discouraged.rs.html  error.rs.html  export.rs.html  expr.rs.html  ext.rs.html  generics.rs.html  group.rs.html  ident.rs.html  lib.rs.html  lifetime.rs.html  lit.rs.html  lookahead.rs.html  mac.rs.html  macros.rs.html  op.rs.html  parse.rs.html  parse_macro_input.rs.html  parse_quote.rs.html  ty.rs.html  (+9 more)
syn/: all.html  enum.Type.html  index.html  struct.TypeTraitObject.html
(+65 files in other folders)
